--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
@@ -12,7 +13,25 @@
         </div>
         <main class="d-flex">
             <nav id="side-bar">
-                <img src="" alt="">
+                <div class="side-bar-container">
+                    <img src="img/logo.svg" alt="logo spotify">
+                    <ul class="padding-x list">
+                        <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Cerca</a></li>
+                        <li><a href="#"><i class="fa-solid fa-lines-leaning"></i> La tua libreria</a></li>
+                    </ul>
+                    <h4>PLAYLIST</h4>
+                    <a href="#">+</a> Crea PLAYLIST
+                    <ul class="padding-x line-height">
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                    </ul>
+                </div>
             </nav>
             <div id="main-content">
                 <nav>
