fixed opacity, padding and button side-bar

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
         <div class="call-to-action">
         </div>
         <main class="d-flex">
-            <nav id="side-bar">
+            <nav id="side-bar" class="small-font">
                 <div class="side-bar-container">
                     <img src="img/logo.svg" alt="logo spotify">
-                    <ul class="padding-x list">
+                    <ul class="padding-x list opacity">
                         <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
                         <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Cerca</a></li>
                         <li><a href="#"><i class="fa-solid fa-lines-leaning"></i> La tua libreria</a></li>
                     </ul>
-                    <h4>PLAYLIST</h4>
-                    <a href="#">+</a> Crea PLAYLIST
-                    <ul class="padding-x line-height">
+                    <h4 class="small-padding-bottom">PLAYLIST</h4>
+                    <div class="d-flex align-center space-between">
+                        <a href="#" class="plus-bt">+</a> <p class="opacity">Crea PLAYLIST</p>
+                    </div>
+                    <ul class="padding-x line-height opacity">
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
