call-to-action bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="call-to-action">
+        <div class="call-to-action medium-font">
+            <div class="button">
+                <a href="#" class="bt-upgrade">EFFETTUTA L'UPGRADE</a>
+            </div>
         </div>
         <main class="d-flex">
             <nav id="side-bar" class="small-font">
@@ -22,7 +25,7 @@
                     </ul>
                     <h4 class="small-padding-bottom">PLAYLIST</h4>
                     <div class="d-flex align-center space-between">
-                        <a href="#" class="plus-bt">+</a> <p class="opacity">Crea PLAYLIST</p>
+                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="opacity">Crea PLAYLIST</p>
                     </div>
                     <ul class="padding-x line-height opacity">
                         <li><a href="#">Nuova Playlist</a></li>
