--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <main class="d-flex">
-            <nav id="side-bar" class="small-font">
+            <nav id="side-bar" class="small-font c-flex">
                 <div class="side-bar-container">
                     <img src="img/logo.svg" alt="logo spotify">
                     <ul class="padding-x list opacity">
@@ -36,6 +36,16 @@
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
                     </ul>
+                </div>
+                <div class="install">
+                    <div class="opacity padding-y padding-x">
+                        <i class="fa-regular fa-circle-down padding-y padding-x"></i> <span>Installa app</span>
+                        <hr>
+                    </div>
+                    <div class="profile d-flex align-center padding-y">
+                        <img src="img/profile.svg" alt="profile">
+                        <p class="bold padding-y">John Doe</p>
+                    </div>
                 </div>
             </nav>
             <div id="main-content">
