flex first column play bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
                 </section>
             </div>
         </main>
-        <div id="play-bar"></div>
+        <div id="play-bar">
+            <div class="d-flex align-center song text-white">
+                <img src="img/sinister.jpeg" alt="sinister">
+                <p>
+                    Sinister <br>
+                    <span class="opacity">Brano Nome</span>
+                </p>
+                <p class="opacity"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
