second column play bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </section>
             </div>
         </main>
-        <div id="play-bar">
+        <div id="play-bar" class="d-flex">
             <div class="d-flex align-center song text-white">
                 <img src="img/sinister.jpeg" alt="sinister">
                 <p>
@@ -68,6 +68,18 @@
                     <span class="opacity">Brano Nome</span>
                 </p>
                 <p class="opacity"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
+            </div>
+            <div class="text-white">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="fa-regular fa-circle-play"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-rotate-right"></i>
+                <div>
+                    <p>0.23</p>
+                    <hr>
+                    <p>4.35</p>
+                </div>
             </div>
         </div>
     </div>
