third column play-bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </section>
             </div>
         </main>
-        <div id="play-bar" class="d-flex">
+        <div id="play-bar" class="d-flex space-between">
             <div class="d-flex align-center song text-white">
                 <img src="img/sinister.jpeg" alt="sinister">
                 <p>
@@ -69,7 +69,7 @@
                 </p>
                 <p class="opacity"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
             </div>
-            <div class="text-white">
+            <div class="text-white song">
                 <i class="fa-solid fa-shuffle"></i>
                 <i class="fa-solid fa-backward-step"></i>
                 <i class="fa-regular fa-circle-play"></i>
@@ -77,9 +77,15 @@
                 <i class="fa-solid fa-rotate-right"></i>
                 <div>
                     <p>0.23</p>
-                    <hr>
+                    <div>1</div>
                     <p>4.35</p>
                 </div>
+            </div>
+            <div class="text-white song">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-tv"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div>1</div>
             </div>
         </div>
     </div>
