--- a/index.html
+++ b/index.html
@@ -61,31 +61,34 @@
             </div>
         </main>
         <div id="play-bar" class="d-flex space-between">
-            <div class="d-flex align-center song text-white">
+            <div class="d-flex align-center song text-white padding-y">
                 <img src="img/sinister.jpeg" alt="sinister">
-                <p>
+                <p class="padding-y small-font">
                     Sinister <br>
                     <span class="opacity">Brano Nome</span>
                 </p>
-                <p class="opacity"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
+                <p class="opacity padding-y small-font"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
             </div>
             <div class="text-white song">
-                <i class="fa-solid fa-shuffle"></i>
-                <i class="fa-solid fa-backward-step"></i>
-                <i class="fa-regular fa-circle-play"></i>
-                <i class="fa-solid fa-forward-step"></i>
-                <i class="fa-solid fa-rotate-right"></i>
-                <div>
-                    <p>0.23</p>
-                    <div>1</div>
-                    <p>4.35</p>
+                <div class="play">
+                    <i class="fa-solid fa-shuffle padding-y"></i>
+                    <i class="fa-solid fa-backward-step padding-y"></i>
+                    <i class="fa-regular fa-circle-play padding-y"></i>
+                    <i class="fa-solid fa-forward-step padding-y"></i>
+                    <i class="fa-solid fa-rotate-right padding-y"></i>
+                </div>
+                <div class="small-font d-flex align-center">
+                    <p class="padding-y">0.23</p>
+                    <div class="play-bar">
+                    </div>
+                    <p class="padding-y">4.35</p>
                 </div>
             </div>
-            <div class="text-white song">
-                <i class="fa-solid fa-bars"></i>
-                <i class="fa-solid fa-tv"></i>
-                <i class="fa-solid fa-volume-high"></i>
-                <div>1</div>
+            <div class="text-white song d-flex align-center justify-end padding-y">
+                <i class="fa-solid fa-bars padding-y"></i>
+                <i class="fa-solid fa-tv padding-y"></i>
+                <i class="fa-solid fa-volume-high padding-y"></i>
+                <div class="volume-bar"></div>
             </div>
         </div>
     </div>
