--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
             </nav>
             <div id="main-content">
                 <nav>
-                    navbar
+                    <ul class="d-flex justify-center opacity small-font">
+                        <li class="padding-y"><a href="#">IN EVIDENZA</a></li>
+                        <li class="padding-y"><a href="#">PODCAST</a></li>
+                        <li class="padding-y"><a href="#">CLASSIFICHE</a></li>
+                        <li class="padding-y"><a href="#">GENERI E MOOD</a></li>
+                        <li class="padding-y"><a href="#">NUOVE USCITE</a></li>
+                        <li class="padding-y"><a href="#">SCOPRI</a></li>
+                    </ul>
                 </nav>
                 <section id="recently">
                     <h2>Recently played</h2>
