section recently played

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </nav>
             <div id="main-content">
-                <nav>
+                <nav class="padding-x">
                     <ul class="d-flex justify-center opacity small-font">
                         <li class="padding-y"><a href="#">IN EVIDENZA</a></li>
                         <li class="padding-y"><a href="#">PODCAST</a></li>
@@ -59,10 +59,51 @@
                         <li class="padding-y"><a href="#">SCOPRI</a></li>
                     </ul>
                 </nav>
-                <section id="recently">
+                <section id="recently" class="padding-x text-white padding-y">
                     <h2>Recently played</h2>
-                    <div class="album">
-                        <div class="cover"></div>
+                    <div class="album d-flex space-between">
+                        <div class="cover padding-x">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <p class="text-center padding-x small-font">
+                                Heavy Metal <br>
+                                <span class="opacity">Subtitle</span>
+                            </p>
+                        </div>
+                        <div class="cover padding-x">
+                            <img src="img/stranger.jpeg" alt="stranger things">
+                            <p class="text-center padding-x small-font">
+                                Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack) <br>
+                                <span class="opacity">Kyle Dixon & Michael Stein</span>
+                            </p>
+                        </div>
+                        <div class="cover padding-x">
+                            <img src="img/aquietplace.jpeg" alt="a quiet place">
+                            <p class="text-center padding-x small-font">
+                                A quiet place <br>
+                                <span class="opacity">Subtitle</span>
+                            </p>
+                        </div>
+                        <div class="cover padding-x">
+                            <img src="img/split.jpeg" alt="split">
+                            <p class="text-center padding-x small-font">
+                                Split <br>
+                                <span class="opacity">Subtitle</span>
+                            </p>
+                        </div>
+                        <div class="cover padding-x">
+                            <img src="img/cure.jpeg" alt="a cure for wellness">
+                            <p class="text-center padding-x small-font">
+                                A cure for wellness <br>
+                                <span class="opacity">Subtitle</span>
+                            </p>
+                        </div>
+                        <div class="cover padding-x">
+                            <img src="img/sinister.jpeg" alt="sinister">
+                            <p class="text-center padding-x small-font">
+                                Sinister <br>
+                                <span class="opacity">Subtitle</span>
+                            </p>
+                        </div>
                     </div>
                 </section>
             </div>
