section creato per

--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
                         </div>
                     </div>
                 </section>
+                <section id="creato-per" class="padding-x text-white padding-y">
+                    <h2>Creato per Erica Ostini</h2>
+                    <p class="opacity padding-x small-font">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <div class="album d-flex justify-start">
+                        <div class="padding-x cover-mix">
+                            <img src="img/radar.jpeg" alt="relase radar">
+                            <p class="padding-x small-font text-center">Release Radar</p>
+                        </div>
+                        <div class="padding-x cover-mix">
+                            <img src="img/mixdaily.jpeg" alt="relase radar">
+                            <p class="padding-x small-font text-center">Daily Mix 1</p>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <div id="play-bar" class="d-flex space-between">
