--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
                         </div>
                     </div>
                 </section>
+                <section id="creato-per" class="padding-x text-white padding-y">
+                    <h2>Artisti più popolari</h2>
+                    <p class="opacity padding-x small-font">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <div class="album d-flex justify-start">
+                        <div class="padding-x cover-mix">
+                            <img src="img/youg.jpeg" alt="youg" class="circle">
+                            <p class="small-font text-center padding-x">Lana Del Rey</p>
+                        </div>
+                        <div class="padding-x cover-mix">
+                            <img src="img/einaudi.jpeg" alt="einaudi" class="circle">
+                            <p class="small-font text-center padding-x">Ludovico Einaudi</p>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <div id="play-bar" class="d-flex space-between">
