media query 992px md, flex recently section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </nav>
                 <section id="recently" class="padding-x text-white padding-y">
                     <h2>Recently played</h2>
-                    <div class="album d-flex space-between">
+                    <div class="album d-flex">
                         <div class="cover padding-x">
                             <img src="img/metal_lifting.jpg" alt="metal">
                             <p class="text-center padding-x small-font">
