media query 768px, flex recently and nav bar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
             <div id="main-content">
                 <nav class="padding-x">
-                    <ul class="d-flex justify-center opacity small-font">
+                    <ul class="d-flex justify-center opacity small-font wrap">
                         <li class="padding-y"><a href="#">IN EVIDENZA</a></li>
                         <li class="padding-y"><a href="#">PODCAST</a></li>
                         <li class="padding-y"><a href="#">CLASSIFICHE</a></li>
