basis media query 576px

--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
                 <div class="side-bar-container">
                     <img src="img/logo.svg" alt="logo spotify">
                     <ul class="padding-x list opacity">
-                        <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
-                        <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Cerca</a></li>
-                        <li><a href="#"><i class="fa-solid fa-lines-leaning"></i> La tua libreria</a></li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-house"></i><span class="hidden"> Home</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="hidden"> Cerca</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-lines-leaning"></i><span class="hidden"> La tua libreria</span></a>
+                        </li>
                     </ul>
-                    <h4 class="small-padding-bottom">PLAYLIST</h4>
-                    <div class="d-flex align-center space-between">
+                    <h4 class="small-padding-bottom hidden">PLAYLIST</h4>
+                    <div class="d-flex align-center space-between hidden">
                         <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="opacity">Crea PLAYLIST</p>
                     </div>
-                    <ul class="padding-x line-height opacity">
+                    <ul class="padding-x line-height opacity hidden">
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
