change logo with media query 576px

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
                 <a href="#" class="bt-upgrade">EFFETTUTA L'UPGRADE</a>
             </div>
         </div>
-        <main class="d-flex">
+        <main class="d-flex stretch">
             <nav id="side-bar" class="small-font c-flex">
                 <div class="side-bar-container">
-                    <img src="img/logo.svg" alt="logo spotify">
+                    <img src="img/logo.svg" alt="logo spotify" class="logo">
+                    <img src="img/logo-small.svg" alt="small logo" class="small-logo">
                     <ul class="padding-x list opacity">
                         <li>
                             <a href="#"><i class="fa-solid fa-house"></i><span class="hidden"> Home</span></a>
@@ -45,12 +46,12 @@
                 </div>
                 <div class="install">
                     <div class="opacity padding-y padding-x">
-                        <i class="fa-regular fa-circle-down padding-y padding-x"></i> <span>Installa app</span>
+                        <i class="fa-regular fa-circle-down padding-y padding-x"></i> <span class="hidden">Installa app</span>
                         <hr>
                     </div>
                     <div class="profile d-flex align-center padding-y">
                         <img src="img/profile.svg" alt="profile">
-                        <p class="bold padding-y">John Doe</p>
+                        <p class="bold padding-y hidden">John Doe</p>
                     </div>
                 </div>
             </nav>
