play-bar position absolute

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
@@ -163,6 +164,8 @@
                 <div class="small-font d-flex align-center">
                     <p class="padding-y">0.23</p>
                     <div class="play-bar">
+                        <div class="start-bar">
+                        </div>
                     </div>
                     <p class="padding-y">4.35</p>
                 </div>
@@ -171,7 +174,9 @@
                 <i class="fa-solid fa-bars padding-y"></i>
                 <i class="fa-solid fa-tv padding-y"></i>
                 <i class="fa-solid fa-volume-high padding-y"></i>
-                <div class="volume-bar"></div>
+                <div class="volume-bar">
+                    <div class="start-bar"></div>
+                </div>
             </div>
         </div>
     </div>
