fixed side bar media query 576px

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
         </div>
         <main class="d-flex stretch">
-            <nav id="side-bar" class="small-font c-flex">
-                <div class="side-bar-container">
+            <nav id="side-bar" class="small-font c-flex padding-x">
+                <div class="padding-y">
                     <img src="img/logo.svg" alt="logo spotify" class="logo">
                     <img src="img/logo-small.svg" alt="small logo" class="small-logo">
                     <ul class="padding-x list opacity">
@@ -32,8 +32,8 @@
                         </li>
                     </ul>
                     <h4 class="small-padding-bottom hidden">PLAYLIST</h4>
-                    <div class="d-flex align-center space-between hidden">
-                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="opacity">Crea PLAYLIST</p>
+                    <div class="d-flex align-center hidden">
+                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="opacity padding-y">Crea PLAYLIST</p>
                     </div>
                     <ul class="padding-x line-height opacity hidden">
                         <li><a href="#">Nuova Playlist</a></li>
@@ -48,7 +48,7 @@
                 <div class="install">
                     <div class="opacity padding-y padding-x">
                         <i class="fa-regular fa-circle-down padding-y padding-x"></i> <span class="hidden">Installa app</span>
-                        <hr>
+                        <hr class="hidden">
                     </div>
                     <div class="profile d-flex align-center padding-y">
                         <img src="img/profile.svg" alt="profile">
