hover nav main content, text and underline

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="padding-y">
                     <img src="img/logo.svg" alt="logo spotify" class="logo">
                     <img src="img/logo-small.svg" alt="small logo" class="small-logo">
-                    <ul class="padding-x list opacity">
+                    <ul class="padding-x list">
                         <li>
                             <a href="#"><i class="fa-solid fa-house"></i><span class="hidden"> Home</span></a>
                         </li>
@@ -33,9 +33,9 @@
                     </ul>
                     <h4 class="small-padding-bottom hidden">PLAYLIST</h4>
                     <div class="d-flex align-center hidden">
-                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="opacity padding-y">Crea PLAYLIST</p>
+                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="padding-y">Crea PLAYLIST</p>
                     </div>
-                    <ul class="padding-x line-height opacity hidden">
+                    <ul class="padding-x line-height hidden">
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
                         <li><a href="#">Nuova Playlist</a></li>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="install">
-                    <div class="opacity padding-y padding-x">
+                    <div class="padding-y padding-x">
                         <i class="fa-regular fa-circle-down padding-y padding-x"></i> <span class="hidden">Installa app</span>
                         <hr class="hidden">
                     </div>
@@ -58,18 +58,18 @@
             </nav>
             <div id="main-content">
                 <nav class="padding-x">
-                    <ul class="d-flex justify-center opacity small-font wrap">
-                        <li class="padding-y"><a href="#">IN EVIDENZA</a></li>
-                        <li class="padding-y"><a href="#">PODCAST</a></li>
-                        <li class="padding-y"><a href="#">CLASSIFICHE</a></li>
-                        <li class="padding-y"><a href="#">GENERI E MOOD</a></li>
-                        <li class="padding-y"><a href="#">NUOVE USCITE</a></li>
-                        <li class="padding-y"><a href="#">SCOPRI</a></li>
+                    <ul class="d-flex justify-center small-font wrap">
+                        <li class="padding-y"><a href="#" class=" grey-text bold">IN EVIDENZA</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold">PODCAST</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold">CLASSIFICHE</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold">GENERI E MOOD</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold">NUOVE USCITE</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold">SCOPRI</a></li>
                     </ul>
                 </nav>
                 <section id="recently" class="padding-x text-white padding-y">
                     <h2>Recently played</h2>
-                    <div class="album d-flex">
+                    <div class="album d-flex wrap">
                         <div class="cover padding-x">
                             <img src="img/metal_lifting.jpg" alt="metal">
                             <p class="text-center padding-x small-font">
